# simple-metrics-agent

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
src/: agent.cpp  agent.hpp  config.cpp  config.hpp  hostname.cpp  hostname.hpp  main.cpp  metrics.cpp  metrics.hpp  net.cpp  net.hpp  posix_error.hpp
tests/: unit_tests.cpp
